--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,7 +27,8 @@
   "homepage": "https://github.com/area1110/Blog_nodejs#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.4"
+    "express-handlebars": "^7.0.4",
+    "tedious": "^15.1.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
